# college-bct-

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: code_synth.py  graph_pipeline.py  languages.py  llm_client.py  render_pipeline.py  script_writer.py  server.py  voice_synth.py
frontend/: app.py
