[project]
name = "conceptreel"
version = "0.1.0"
description = "Topic to narrated Manim video, multilingual voiceover via Sarvam, LLM calls via OpenRouter."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.38",
    "openai>=1.40",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langsmith>=0.1",
    "manim>=0.19",
    "pydantic>=2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
